# enhancing-sgmcmc

./: .gitignore  README.md  main.ist  pyproject.toml
configs/: bimodal_gaussian.yaml  illcond_gaussian.yaml  minimal_test.yaml  mixture_gaussian.yaml  unimodal_gaussian.yaml
enhancing-sgmcmc/notebooks/: sgmcmc_test.ipynb
enhancing_sgmcmc/: metrics.py  utils.py
enhancing_sgmcmc/notebooks/: sgmcmc_test.ipynb
enhancing_sgmcmc/samplers/: sghmc.py
notebooks/: evaluate_experiments.ipynb  sgmcmc_test.ipynb
scripts/: sgmcmc_experiment.py
thesis/: .editorconfig  README.md  bibliography.bib  main.acn  main.acr  main.alg  main.bcf-SAVE-ERROR  main.ist  main.tex  thesis.tex
thesis/chapters/: 05_front_matter.tex  10_introduction.tex  20_background.tex  30_related.tex  30_related_work.tex  40_method.tex  50_experiments.tex  60_results.tex  70_conclusion.tex  70_discussion.tex  80_conclusion.tex  90_appendix.tex  99_appendix.tex
