[tool.poetry]
name = "enhancing_sgmcmc"
version = "0.1.0"
description = "Enhancing sampling in SG-MCMC"
authors = ["Moritz Schlager"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
numpy = "~1.26"
pandas = "^2.2.3"
jax = "^0.5.3"
tqdm = "^4.67.1"

[tool.poetry.group.visualization.dependencies]
matplotlib = "^3.10.1"
ipykernel = "^6.29.5"
seaborn = "^0.13.2"
plotly = "^6.0.1"
nbformat = "^5.10.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
profile = "black"
